--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,17 @@
 {
   "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Matt-T977/Storm_Photo_eCommerce.git"
-  },
-  "author": "Matthew Taylor",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Matt-T977/Storm_Photo_eCommerce/issues"
-  },
-  "homepage": "https://github.com/Matt-T977/Storm_Photo_eCommerce#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "firebase-admin": "^10.0.0"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "firebase-admin": "^10.0.0",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
