--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www --exec babel-node -e js"
+    "build": "babel src -d lib",
+    "babel-node": "babel-node --presets='@babel/preset-env' --ignore='foo'",
+    "start": "nodemon --exec npm run babel-node --./bin/www.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,8 +18,9 @@
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
+    "@babel/preset-env": "^7.16.4"
   }
 }
