--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "babel src -d lib",
-    "babel-node": "babel-node --presets='@babel/preset-env' --ignore='foo'",
-    "start": "nodemon --exec npm run babel-node --./bin/www.js"
+    "dev": "babel-node ./src/bin/www.js",
+    "clean": "del -rf dist",
+    "build": "npm run clean && babel ./src --out-dir dist --copy-files",
+    "prod": "node ./dist/bin/www.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
