--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,12 @@
     "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
     "cookie-parser": "~1.4.4",
     "core-js": "^3.19.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "firebase-admin": "^10.0.0",
     "http-errors": "~1.6.3",
